test/cli/test-validating-policy/policy-with-multiple-crds/pass-widget.yaml
apiVersion: example.com/v1
kind: Widget
metadata:
  name: good-widget
  namespace: default
  labels:
    app: my-app
