test/cli/test-validating-policy/policy-with-multiple-crds/clusterresources-gadget.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: ClusterResource
metadata:
  name: clusterresources-gadget
spec:
  crds:
    - crds/gadget-crd.yaml
